SteveHorses OLD/logs/run_20250823_110719.log
  File "/Users/stephenjerome/Desktop/SteveHorses/steve_horses_board.py", line 77
    }
    ^
SyntaxError: unmatched '}'
